--- a/src/less/author/githubcard.less
+++ b/src/less/author/githubcard.less
@@ -2,7 +2,7 @@
   .author-github {
     display: none;
   }
-  
+
   #github-card-author {
     width: 100%;
     font-size: 16px;
@@ -190,7 +190,7 @@
       max-width: 280px;
       text-overflow: ellipsis;
       color: @theme-color;
-      font-family: @bold-font;
+      font-weight: 600;
       font-size: 1em;
     }
 
