--- a/src/less/author/medium.less
+++ b/src/less/author/medium.less
@@ -26,7 +26,7 @@
     }
 
     .medium-widget-article__title {
-      font-family: @header-font-bold;
+      font-family: @header-font;
       color: @grey-header;
       font-size: 1.2em;
       line-height: 1.2;
