--- a/src/less/author/meetup.less
+++ b/src/less/author/meetup.less
@@ -30,7 +30,7 @@
 
         span {
           display: block;
-          font-family: 'TTNormsPro-Regular', sans-serif;
+          font-family: 'proxima-nova', sans-serif;
           color: lighten(@text-color, 20%);
           font-size: .8em;
           white-space: nowrap;
