--- a/src/less/author/rss.less
+++ b/src/less/author/rss.less
@@ -31,7 +31,7 @@
 
         .rss-title {
           line-height: 1.3;
-          font-family: @bold-font;
+          font-weight: 600;
           transition: @transition;
 
           &:hover {
