--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -35,7 +35,7 @@ section {
 }
 
 strong {
-	font-family: @bold-font;
+	font-weight: 600;
 	color: @h1-color;
 }
 
@@ -59,12 +59,12 @@ h2,
 h4,
 h5,
 h6 {
-	font-family: @bold-font;
+	font-weight: 600;
 	font-weight: 700;
 }
 
 h3 {
-	font-family: @bold-font;
+	font-weight: 600;
 }
 
 .h2,
@@ -139,7 +139,7 @@ input,
 textarea {
 	padding: 7px;
 	.transition(all 0.2s);
-	font-family: 'TTNormsPro-Regular', sans-serif;
+	font-family: 'proxima-nova', sans-serif;
 
 	&:focus {
 		border: 1px solid @theme-color;
