--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -15,7 +15,7 @@
 	&.sidebar-layout {
 		display: grid;
 		grid-gap: 20px;
-		grid-template-columns: 1fr 316px ;
+		grid-template-columns: 2.3fr 1fr;
 		@media(max-width: @tablet-breakpoint) {
 			width: 100%;
 			display: block;
