--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -55,7 +55,7 @@
 		.post-excerpt {
 			margin: 5px auto 0;
 			line-height: 1.2;
-			font-family: @header-font;
+			font-family: @sub-header-font;
 			transition: @transition;
 			color: @h1-color;
 			font-size: 1.3em;
