--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -44,9 +44,8 @@
 
 // Font Styles
 @body-font: 'proxima-nova', sans-serif;
-@bold-font: 'Gilroy-Medium', sans-serif;
-@header-font: 'Gilroy-Regular', sans-serif;
-@header-font-bold: 'Gilroy-SemiBold', sans-serif;
+@header-font: 'HarmoniaSansPro-Bold', sans-serif;
+@sub-header-font: 'HarmoniaSansPro-Regular', sans-serif;
 
 // Animations
 @transition: all 0.2s ease-out;
