--- a/src/less/global/widgets/featured-widget.less
+++ b/src/less/global/widgets/featured-widget.less
@@ -20,14 +20,14 @@
 
     .label {
       color: #738a94;
-      font-family: 'TTNormsPro-Regular', sans-serif;
+      font-family: 'proxima-nova', sans-serif;
       margin: 5px 0;
     }
 
     .post-title {
       font-size: 1.35em;
       Line-height: 1.15;
-      font-family: 'TTNormsPro-Regular', sans-serif;
+      font-family: 'proxima-nova', sans-serif;
       margin: 10px 0;
       color: #2f394f;
       transition: all 0.2s ease-out;
