--- a/src/less/pages/series-archive.less
+++ b/src/less/pages/series-archive.less
@@ -54,7 +54,7 @@
 
           .series-title {
             color: #3f4856;
-            font-family: 'TTNormsPro-Regular', sans-serif;
+            font-family: 'proxima-nova', sans-serif;
             margin-bottom: 7px;
             margin-top: 0;
             font-size: 1.3em;
@@ -69,7 +69,7 @@
             margin: 10px 0;
             line-height: 1.3;
             text-align: left;
-            font-family: 'TTNormsPro-Regular', sans-serif;
+            font-family: 'proxima-nova', sans-serif;
             display: -webkit-box;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
