--- a/src/less/pages/series-detail.less
+++ b/src/less/pages/series-detail.less
@@ -151,7 +151,7 @@
 
     .post-count {
       margin: 0 0 5px;
-      font-family: @bold-font;
+      font-weight: 600;
       font-weight: 100;
       color: lighten(@grey-header, 15%);
       font-size: 0.9em;
@@ -271,7 +271,7 @@
         .tags {
           padding: 2px 8px;
           border-radius: 12px;
-          font-family: @bold-font;
+          font-weight: 600;
           font-size: 0.9em !important;
           color: white !important;
         }
