--- a/src/less/posts/related-posts.less
+++ b/src/less/posts/related-posts.less
@@ -62,6 +62,7 @@
         width: -webkit-fill-available;
         margin: 0;
         color: @grey-header;
+        font-family: @sub-header-font;
         min-height: 35px;
       }
     }
