--- a/post.hbs
+++ b/post.hbs
@@ -11,15 +11,10 @@
 
 			<div class="post-header">
 				<div class="post-meta">
-					{{#primary_tag}}
-						<span class="tags meta-item {{slug}}">{{name}}</span>
-					{{/primary_tag}}
-					{{#primary_author}}
-						<a href="{{url}}" class="meta-item author desktop"><i class="far fa-user-edit" style="width:13px; display:inline-block; margin-right:10px;"></i>
-							<span>{{name}}</span></a>
-					{{/primary_author}}
-					<span class="date meta-item"><i class="far d fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
-					<span class="readtime meta-item"><i class="far d fa-eye"></i> <span>{{reading_time}}</span></span>
+					{{#primary_tag}} <span class="primary-tag meta-item"><i class="far d fa-tag"></i> {{name}}</span> {{/primary_tag}}
+					{{#primary_author}} <a href="{{url}}" class="meta-item author desktop"><i class="far fa-user-edit"></i> {{name}}</a> {{/primary_author}}
+					<span class="date meta-item"><i class="far d fa-calendar"></i> {{date format="MMM Do"}}</span>
+					<span class="readtime meta-item"><i class="far d fa-eye"></i> {{reading_time}}</span>
 				</div>
 				<h1 class="post-title">{{{title}}}</h1>
 
