--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -15,6 +15,7 @@
 		.author-name {
 			text-transform: uppercase;
 			font-size: 1.7em;
+			font-family: @sub-header-font;
 		}
 		.avatar {
 			margin: 0 !important;
