--- a/src/less/etc/error.less
+++ b/src/less/etc/error.less
@@ -54,7 +54,7 @@ header {
     height: 120px;
     text-shadow: -3px 3px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
     font-size: 160px;
-    font-family: @bold-font;
+    font-weight: 600;
     font-weight: 900;
     @media(max-width: @mobile-breakpoint) {
       font-size: 120px;
@@ -67,7 +67,6 @@ header {
     font-size: 30px;
     width: 90%;
     color: white !important;
-    ont-family: @bold-font !important;
     text-shadow: -2px 2px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
   }
 
@@ -76,7 +75,7 @@ header {
     padding-bottom: 32px;
     color: white !important;
     text-shadow: -1px 1px 0 #404767;
-    font-family: @bold-font;
+    font-weight: 600;
   }
 
   .error-button {
@@ -89,7 +88,7 @@ header {
     color: white !important;
     background: rgba(255, 255, 255, 0.25);
     transition: @transition;
-    font-family: @bold-font;
+    font-weight: 600;
     @media(max-width: @mobile-breakpoint) {
       color: #444444;
       width: -webkit-fill-available;
