--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -6,16 +6,16 @@
 nav {
 	position: relative;
 	background: #ffffff;
-	height: 60px;
+	height: 80px;
 	border-bottom: 1px solid #dbe0e5;
 
+
 	.nav-wrapper {
-		display: flex;
-		justify-content: space-between;
 		max-width: 1000px;
 		margin: auto;
-		align-items: center;
 		height: 100%;
+		display: flex;
+		align-items: center;
 		@media(max-width: 1100px) {
 			max-width: 93%;
 		}
@@ -24,19 +24,26 @@ nav {
 		}
 
 		.logo {
-			height: 30px;
 			transition: all 0.2s ease-out;
-			margin-right: 40px;
+			margin-right: 30px;
+
 
 			img {
-				height: 30px;
-				width: 30px;
+				height: 40px;
+				width: 40px;
 			}
 
 			&:hover {
 				opacity: 0.7;
 				cursor: pointer;
 			}
+		}
+
+		.nav-links {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			width: 100%;
 		}
 
 		.left-desktop-nav,
@@ -57,7 +64,7 @@ nav {
 			}
 
 			.donate-btn {
-				font-family: 'TTNormsPro-Regular', sans-serif !important;
+				font-family: 'proxima-nova', sans-serif !important;
 				font-weight: 100;
 				font-size: 1em;
 				-webkit-appearance: none !important;
@@ -81,8 +88,7 @@ nav {
 				color: #626573;
 				border: none;
 				padding: 0;
-				height: 60px;
-				margin-right: 30px;
+				margin-right: 20px;
 				outline: none;
 				transition: @transition;
 				display: flex;
@@ -94,13 +100,10 @@ nav {
 				&>a {
 					display: block;
 					height: fit-content;
-					margin-top: 20px;
-
-
 				}
 
 				button {
-					font-family: 'TTNormsPro-Regular', sans-serif !important;
+					font-family: 'proxima-nova', sans-serif !important;
 					font-weight: 100;
 					font-size: 1em;
 					-webkit-appearance: none !important;
@@ -145,7 +148,7 @@ nav {
 						line-height: 1.5;
 						color: #373940;
 						transition: all 0.2s ease-out;
-						font-family: 'TTNormsPro-Regular', sans-serif;
+						font-family: 'proxima-nova', sans-serif;
 						font-weight: 100;
 						transition: @transition;
 
