--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -118,15 +118,11 @@
 
 	.widget {
 		margin: 0 0 20px;
-		@media(max-width: 950px) {
-			padding: 15px;
-			margin: 0 0 20px;
-		}
 
 		.post-title {
 			a {
 				color: #208cad;
-				font-family: @bold-font;
+				font-weight: 600;
 				transition: all 0.2s ease;
 
 				&:hover {
@@ -140,7 +136,7 @@
 			margin-bottom: 10px;
 			text-transform: uppercase;
 			font-size: 1.2em;
-			font-family: @bold-font;
+			font-weight: 600;
 			color: @grey-header;
 			font-weight: 500;
 		}
@@ -151,7 +147,7 @@
 			font-weight: 500;
 			margin-bottom: 15px;
 			text-transform: uppercase;
-			font-family: @bold-font;
+			font-weight: 600;
 			letter-spacing: 1px;
 			color: @grey-header;
 			margin-top: 0;
