--- a/src/less/global/widgets/recent-widget.less
+++ b/src/less/global/widgets/recent-widget.less
@@ -20,7 +20,7 @@
 
     .post-title,
     .single-author-name {
-      font-family: @bold-font;
+      font-weight: 600;
       transition: all 0.2s ease;
       line-height: 1.2;
       .transition(all 0.2s ease);
