--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -68,7 +68,7 @@
     font-size: 1.1em !important;
     margin-top: 0 !important;
     min-height: 69px;
-    font-family: @header-font-bold;
+    font-family: @header-font;
     @media(max-width: @mobile-breakpoint) {
       font-size: 1.1em !important;
     }
