--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -208,7 +208,7 @@
 
     .title-desktop {
       margin: 0 0 10px!important;
-      font-family: @header-font-bold;
+      font-family: @header-font;
       font-size: 1.3em;
       line-height: 1.3;
       text-align: left;
