--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -96,7 +96,7 @@
 				width: -webkit-fill-available;
 				margin: 0;
 				display: block;
-				font-family: @header-font-bold !important;
+				font-family: @header-font !important;
 				font-size: 3em;
 				letter-spacing: 0;
 				line-height: 1.1;
@@ -133,7 +133,7 @@
 				margin: 40px 0 5px;
 				color: @h1-color;
 				line-height: 1.3;
-				font-family: @body-font;
+				font-family: @sub-header-font;
 				font-weight: 100!important;
 				font-size: 2em;
 				width: 100%;
@@ -156,7 +156,7 @@
 				line-height: 1.2;
 				color: @h1-color;
 				margin: 40px 0 5px;
-				font-family: @bold-font;
+				font-family: @sub-header-font;
 				font-weight: 300;
 				@media(max-width: @tablet-breakpoint) {
 					font-size: 1.3em;
@@ -165,7 +165,7 @@
 					text-align: left;
 					line-height: 1.3;
 					margin-bottom: 5px;
-					font-family: @header-font-bold;
+					font-family: @header-font;
 				}
 			}
 
@@ -189,9 +189,8 @@
 			a {
 				color: @theme-color;
 				transition: @transition;
-				font-family: @bold-font;
+				font-weight: 600;
 				@media(max-width: @mobile-breakpoint) {
-					font-family: @bold-font;
 					overflow: hidden;
 					text-overflow: ellipsis;
 					max-width: 90%;
@@ -494,7 +493,7 @@
 				}
 
 				* {
-					font-family: @bold-font;
+					font-weight: 600;
 					font-style: italic;
 					font-weight: 100;
 					line-height: 1.6;
