--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -1,5 +1,3 @@
-
-
   .post-meta {
     margin: 20px 0;
     color: #787c87;
@@ -13,12 +11,6 @@
       max-width: none;
       width: auto;
       order: 2;
-    }
-
-    span {
-      font-family: @body-font;
-      font-weight: 500;
-      margin: 0;
     }
 
     .date {
@@ -43,23 +35,10 @@
     }
   }
 
-  .author {
-
-    span {
-      text-transform: capitalize;
-    }
-
-    a {
-      * {
-        &:hover {
-          color: @hover-color;
-        }
-      }
-    }
-  }
-
   .meta-item {
     font-size: 1.2em;
+    font-family: @sub-header-font;
+    color: @text-color-light;
     display: flex;
     align-items: center;
     text-transform: capitalize;
@@ -76,13 +55,7 @@
     }
 
     a:hover {
-      * {
-        color: @hover-color;
-      }
-    }
-
-    span {
-      font-family: @body-font;
+          color: @hover-color;
     }
 
     &.desktop {
