removed social share buttons

--- a/partials/author/about-author.hbs
+++ b/partials/author/about-author.hbs
@@ -24,9 +24,7 @@
 				{{/if}}
 			</div>
 			{{#if bio}}
-				<div class="bio">
-					{{{bio}}}
-				</div>
+				<div class="bio"> {{{bio}}} </div>
 			{{/if}}
 		</div>
 	</div>
