--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -15,7 +15,7 @@
 @meta-color: #373b46;				      // Meta info text color
 @post-text-color: #4e505a;        // Unclear why this is different from body font
 @text-color-footer: #b4b4b4;
-@text-color-light: #959595;		   	// Light text color
+@text-color-light: #a7aeb9;		   	// Light text color
 @border-color: #ebebeb;
 @text-post-header: #20809c;
 
