--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -36,7 +36,7 @@
 			border: 1px solid #e3e8f0;
 			border-radius: 2px;
 			font-size: 0.9em;
-			font-weight: unset;
+			font-weight: unset !important;
 			margin-right: 10px;
 			line-height: 1;
 			padding: 8px 10px;
