--- a/src/less/etc/post-archive.less
+++ b/src/less/etc/post-archive.less
@@ -4,7 +4,7 @@
   .postlist {
     width: -webkit-fill-available;
     display: grid;
-    grid-gap: 30px;
+    grid-gap: 20px;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 30px auto;
     @media(max-width: @tablet-breakpoint) {
@@ -25,8 +25,8 @@
       display: flex;
       flex-direction: column;
 
-      .post-preview-side {
-        display: none;
+      .post-preview-details {
+        padding: 20px;
       }
 
       .post-title {
