--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -49,7 +49,7 @@ a {
 
 .h1,
 h1 {
-	font-family: @header-font;
+	font-family: @sub-header-font;
 	font-size: 2em;
 	font-weight: 500;
 	color: @grey-header;
