--- a/src/less/pages/series-archive.less
+++ b/src/less/pages/series-archive.less
@@ -54,17 +54,17 @@
 
           .series-title {
             color: #3f4856;
-            font-family: 'proxima-nova', sans-serif;
+            font-family: @sub-header-font;
             margin-bottom: 7px;
             margin-top: 0;
-            font-size: 1.3em;
+            font-size: 1.5em;
             line-height: 1.2;
             font-weight: 600;
             transition: @transition;
           }
 
           .series-description {
-            font-weight: 300;
+
             color: #373940;
             margin: 10px 0;
             line-height: 1.3;
