--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -1,6 +1,3 @@
-@import (css) url("//hackers.nyc3.cdn.digitaloceanspaces.com/fonts/dankmono/css/dank-mono.css");
-
-
 /* Global Styles */
 @import './global/variables.less';
 
@@ -22,16 +19,7 @@
 
 /* Code */
 @import './posts/code.less';
-/*@import './posts/languages/default.less';
-@import './posts/languages/shell.less';
-@import './posts/languages/python.less';
-@import './posts/languages/javascript.less';
-@import './posts/languages/sql.less';
-@import './posts/languages/json.less';
-@import './posts/languages/config.less';
-@import './posts/languages/markup.less';
-@import './posts/languages/java.less';*/
 @import './posts/languages/nord.less';
 
 /* Baquette Box */
-@import 'https://hackers.nyc3.cdn.digitaloceanspaces.com/css/baguettebox.css';
+@import 'https://hackersandslackers-cdn.storage.googleapis.com/css/baguetteBox.min.css';
