--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -11,6 +11,10 @@
     max-width: none;
     width: auto;
     order: 2;
+
+    .date {
+      display: none !important;
+    }
   }
 
   .tags {
@@ -27,6 +31,8 @@
       }
     }
   }
+
+
 
   .meta-item {
     font-size: 1.2em;
