--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -95,9 +95,9 @@
     font-weight: 100;
     float: left!important;
     font-size: 0.85em !important;
-    margin: 0 auto !important;
+    margin: 10px auto !important;
     max-width: 450px;
-    padding: 0 25px 25px;
+    padding: 0 25px;
     text-align: center;
     text-align: left;
     min-height: 70px;
