--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -13,18 +13,16 @@
     margin: 0 0 10px;
   }
 
-  .author {
-    margin-bottom: 10px;
-    line-height: 1;
-    color: #326671;
-    padding: 0 10px;
-  }
-
   .author-name {
     font-family: @body-font;
-    font-size: 1.2em;
-    color: @grey-header;
+    font-size: 1.4em;
+    color: @h1-color;
     margin-top: 2px;
+    width: 100%;
+    display: block;
+    text-align: left;
+    margin-bottom: 10px;
+    line-height: 1;
     @media(max-width: @mobile-breakpoint) {
       font-size: 1.4em;
     }
@@ -56,8 +54,8 @@
     position: absolute;
     left: auto;
     right: 20px;
-    width: 75px;
-    height: 73px;
+    width: 85px;
+    height: 83px;
     margin: auto;
     top: 92px;
     border: 3px solid white;
@@ -81,23 +79,20 @@
     display: inline-block;
     /* margin-left: 6px; */
     overflow: hidden;
-    padding: 17px;
+    padding: 25px;
     text-align: center;
     margin-top: 5px;
     margin-left: 0;
-    padding-bottom: 8px;
   }
 
   .bio {
     display: block;
     width: -webkit-fill-available;
-    line-height: 1.5;
-    font-weight: 100;
+    line-height: 1.3;
+    font-weight: 200;
     float: left!important;
-    font-size: 0.85em !important;
     margin: 10px auto !important;
     max-width: 450px;
-    padding: 0 25px;
     text-align: center;
     text-align: left;
     min-height: 70px;
@@ -160,7 +155,6 @@
       display: block;
       margin-bottom: 2px;
       text-align: left;
-      padding: 0 10px;
       @media (max-width: 1040px) {
         margin: 0 auto 3px;
       }
