--- a/partials/nav/header.hbs
+++ b/partials/nav/header.hbs
@@ -8,8 +8,8 @@
     {{/if}}
     <div class="nav-links">
       <div class="left-desktop-nav">
-        <div class="dropdown authors">
-          <a href="{{@site.url}}/about/"><button>Authors</button></a>
+        <div class="dropdown">
+          <button class="authors">Authors</button>
           <div class="dropdown-content">
             {{#get "authors" limit="all" order="count.posts desc" }}
               {{#foreach authors}}
@@ -19,8 +19,8 @@
           </div>
         </div>
 
-        <div class="dropdown posts">
-          <a href="{{@site.url}}/archive/"><button>Posts</button></a>
+        <div class="dropdown">
+          <button class="posts">Posts</button>
           <div class="dropdown-content">
             {{#get "tags" filter="slug:-[roundup,excel,machine-learning,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" limit="10" include="count.posts" order="count.posts DESC" }}
               {{#foreach tags}}
@@ -30,8 +30,8 @@
           </div>
         </div>
 
-        <div class="dropdown pages">
-          <button>Pages</button>
+        <div class="dropdown">
+          <button class="pages">Pages</button>
           <div class="dropdown-content">
             <a href="{{@site.url}}/about/">About Us</a>
             <a href="{{@site.url}}/series/">Series</a>
@@ -41,8 +41,8 @@
           </div>
         </div>
 
-        <div class="dropdown publications">
-          <a href="{{@site.url}}/series/"><button>Series'</button></a>
+        <div class="dropdown">
+          <button class="publications">Series'</button>
           <div class="dropdown-content">
             {{#get "tags" filter="feature_image:-null+slug:-[starting-django,plotly-dash]" include="count.posts,meta_title,slug" order="count.posts DESC" limit="all"}}
               {{#foreach tags visibility="internal"}}
