series paghe fixes

--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -16,7 +16,7 @@
     </div>
     <div class="meta">
       {{#primary_tag}}
-        <a href="{{url}}" class="tags meta-item {{slug}}">{{name}}</a>
+        <a href="{{url}}" class="tags meta-item {{slug}}"><i class="far fa-tag"></i> {{name}}</a>
       {{/primary_tag}}
       {{#primary_author}}
         {{primary_author.bio}}
