--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -104,19 +104,26 @@ nav {
 				outline: none;
 				transition: @transition;
 				position: relative;
-				height: 100%;
+				height: -webkit-fill-available;
 
 				@media(max-width: @tablet-breakpoint) {
-					  margin: 0 0 0 20px;
+					  margin: 0 0 0 30px;
 				}
 
-				 & > button {
-					height: 80px;
+				.mobile-link {
+					display: none !important;
+
+					@media(max-width: @mobile-breakpoint) {
+						  display: flex !important;
+					}
+				}
+
+				button,
+				.mobile-link {
+					height: -webkit-fill-available;
 			    display: flex;
 			    align-items: center;
-				}
-
-				button {
+					padding: 0;
 					font-family: 'proxima-nova', sans-serif !important;
 					font-size: 1em;
 					-webkit-appearance: none !important;
@@ -134,7 +141,19 @@ nav {
 					}
 				}
 
+				button {
+					@media(max-width: @mobile-breakpoint) {
+						display: none !important;
+					}
+				}
+
 				&.pages {
+					@media(max-width: @mobile-breakpoint) {
+						display: none;
+					}
+				}
+
+				&.posts {
 					@media(max-width: @mobile-breakpoint) {
 						display: none;
 					}
