teitter widget fix

--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -25,19 +25,16 @@ nav {
 			max-width: 86%;
 		}
 
-		.logo {
+		.nav-logo {
 			transition: all 0.2s ease-out;
 			margin-right: 30px;
-
-
-			img {
 				height: 40px;
 				width: 40px;
 				@media(max-width: 600px) {
 					height: 35px;
 					width: 35px;
 				}
-			}
+
 
 			&:hover {
 				opacity: 0.7;
